# heating-systems-conversational-ai

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.claude/: CLAUDE.md  dsm-ecosystem.md  last-align-report.md  last-align.txt  last-wrap-up.txt  reasoning-lessons-compact.md  reasoning-lessons.md  session-baseline.txt  session-transcript.md  settings.json
.claude/hooks/: transcript-reminder.sh
.claude/memory/: MEMORY.md
.claude/transcripts/: 2026-04-07T00:00-ST.md  2026-04-14T15:10-ST.md
_inbox/: 2026-04-14_dsm-align-update.md  2026-04-29_dsm-align-update.md  2026-05-12_pr-status-followup.md  2026-05-12_qa-parallel-session-inbox-write.md
_inbox/done/: 2026-04-06_dsm-align-update.md  2026-04-13_dsm-graph-explorer_contribution-playbook.md  2026-04-17_dsm-align-update.md  2026-04-18_dsm-align-update.md  2026-04-21_dsm-align-update.md  2026-04-23_dsm-align-update.md
_reference/: sprint-plan.md  user-interactions.md
dsm-docs/blog/: journal.md
dsm-docs/checkpoints/: 2026-04-07_session-3-light.md  2026-04-14_s4_light.md  2026-04-18_s5_sprint1_close_checkpoint.md  (+6 more)
eval/: exp001_retrieval_quality.py  sprint2_retrieval_testset.yaml
scratch/: embedding_benchmark.py  haystack_ollama_tools_spike.py
scripts/: ingest.py  smoke_test.py  spike_streaming_with_tools.py
src/: config.py  graph.py  prompts.py
tests/: test_boundaries.py  test_chunking.py  test_config.py  test_graph.py  test_heating_curve.py  test_ingest.py  test_rag_search.py  test_retrieval.py  test_standard_lookup.py  test_tool_error_handling.py  test_unit_converter.py
(+75 files in other folders)
