[project]
name = "heating-systems-conversational-ai"
version = "0.1.0"
description = "LangGraph-based conversational AI for residential heating domain (hybrid with Haystack RAG in Sprint 2)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "streamlit>=1.39.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "haystack-ai>=2.28.0",
    "ollama-haystack>=6.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
